--- a/BinalDemo/Views/SocialMedia/SocialMedia.cshtml
+++ b/BinalDemo/Views/SocialMedia/SocialMedia.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>SocialMedia</title>
+    <title>SocialMedia branch</title>
 </head>
 <body>
     <div> 
